--- a/Media Query 4.html
+++ b/Media Query 4.html
@@ -19,7 +19,7 @@
     <h3>Element Hiding Using Media Query:</h3>
     <div class="example">Example DIV.</div>
 
-    <p>Demonstration of hiding element in media query</p>
+    <p>Demonstration of hiding element in media query.</p>
     <br>
     <hr>
 
